--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zip.js/zip.js": "^2.7.54",
     "classnames": "^2.5.1",
+    "deep-copy-ts": "^0.5.4",
     "html-to-image": "^1.11.11",
     "i18next": "^24.2.1",
     "lucide-react": "^0.471.1",
