--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "html-to-image": "^1.11.11",
     "i18next": "^24.2.1",
     "lucide-react": "^0.471.1",
+    "postcss-for": "^2.1.1",
+    "postcss-nested": "^7.0.2",
     "react": "^18.3.1",
     "react-context-refs": "^0.2.1",
     "react-dom": "^18.3.1",
