--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muos-react-theme-toolkit",
   "private": true,
-  "version": "0.2.2",
+  "version": "0.2.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,8 +17,6 @@
     "html-to-image": "^1.11.11",
     "i18next": "^24.2.1",
     "lucide-react": "^0.471.1",
-    "postcss-for": "^2.1.1",
-    "postcss-nested": "^7.0.2",
     "react": "^18.3.1",
     "react-context-refs": "^0.2.1",
     "react-dom": "^18.3.1",
@@ -36,6 +34,8 @@
     "globals": "^15.14.0",
     "i18next-parser": "^9.1.0",
     "lv_font_conv": "^1.5.3",
+    "postcss-advanced-variables": "^5.0.0",
+    "postcss-nested": "^7.0.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
