--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "html-to-image": "^1.11.11",
     "i18next": "^24.2.1",
+    "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-context-refs": "^0.2.1",
     "react-dom": "^18.3.1",
