--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@zip.js/zip.js": "^2.8.7",
     "classnames": "^2.5.1",
-    "html-to-image": "^1.11.13",
+    "html-to-image": "1.11.11",
     "i18next": "^24.2.1",
     "react": "^18.3.1",
     "react-context-refs": "^0.2.1",
